--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     <!-- header -->
 
-    <head>
+    <header>
         <div id="header">
             <h1>Numbers Identity 🔎</h1>
         </div>
-    </head>
+    </header>
 
     <!-- Navbar -->
     <nav>
         <div>
-            <ul class="flex nav-links">
+            <div class="flex nav-links">
                 <h5 id="even-btn">For EVEN</h5>
                 <h5 id="odd-btn">For ODD</h5>
                 <h5 id="prime-btn">For PRIME</h5>
-            </ul>
+            </div>
         </div>
     </nav>
 
@@ -54,11 +54,17 @@
                 <button onclick="color_odd()">Odd</button>
                 <button onclick="color_even()">Even</button>
                 <button onclick="restart()">Restart</button>
+                <button onclick="serial()">Serial No.</button>
             </div>
         </div>
     </section>
 
+    <div class="flex">
+        <h2 id="Result">RESULT :</h2>
+    </div>
+
     <footer>
+
     </footer>
 
     <!-- javascript link -->
